Version 2.9
-----------

Bugfix release.

- Fix issue #6 reported on github by fonic.
- Fix ordering of rows with identical keys by concatenating the
  date to the name of the key.


Version 2.8
-----------

Bugfix and significant speed improvements.

- Fix issue #7 reported on github by fonic and lyallp.
- Misc. linting and merged old changes.


Version 2.7
-----------

Contributions from Fonic (github.com/fonic):
- Misc. UI and usability improvements
- The location of the configuration file was changed to
  ~/.config/elogviewer
- Bugfix: Do not mark first selected item as read on application start